--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "browserslist": "> 0.25%, not dead",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
@@ -40,8 +41,6 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.13",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.5.0",
     "react-refresh": "^0.13.0",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
@@ -52,6 +51,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.1"
   }
