--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
